--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="output.css">
 
 </head>
-<body class="bg-gradient-to-tr from-slate-800">
+<body class="bg-gradient-to-tr from-green-950">
+  
 
   <header class="p-1 sticky top-0 z-10 bg-neutral-250 backdrop:filter backdrop-blur-lg bg-opacity-30 ">
-    <div class="logo flex items-center">
-      <button class=" text-center  font-sans group group-hover:before:duration-500 group-hover:after:duration-500 after:duration-500 hover:border-blue-300 hover:before: duration-500 before:duration-500 hover:duration-500  hover:after:-right-8 hover:before:right-12 hover:before:-bottom-8 hover:before:blur hover:underline hover:underline-offset-4  origin-center hover:decoration-2 hover:text-rose-300 relative bg-neutral-800 h-17 w-16 border  p-3 text-gray-50 text-base font-bold rounded-lg  overflow-hidden  before:absolute before:w-12 before:h-12 before:content[''] before:right-1 before:top-1 before:z-10 before:bg-sky-500 before:rounded-full before:blur-lg  after:absolute after:z-10 after:w-20 after:h-20 after:content['']  after:bg-sky-300 after:right-8 after:top-3 after:rounded-full after:blur-lg">
-        <a href="https://www.sendspace.com/file/tc281s">CV</a>
-      </button>
+    <div class="logo items-center justify-center place-items-center">
+ 
       
       
-        <nav class="ml-auto flex gap-x-5">
-            <a href="" class="text-white  font-sans relative transition-colors duration-300 hover:text-sky-500">Inicio</a>
-            <a href="#C7" class="text-white  font-sans relative transition-colors duration-300 hover:text-sky-500 ">Contacto</a>
-            <a href="#experiencia"  class="text-white  font-sans relative transition-colors duration-300 hover:text-sky-500">Experiencia</a>
+        <nav class="items-center justify-center place-items-center flex gap-x-5">
+            <a href="" class="text-white  font-sans relative transition-colors duration-300 hover:text-blue-500">Inicio</a>
+            <a href="#C7" class="text-white  font-sans relative transition-colors duration-300 hover:text-blue-500 ">Contacto</a>
+            <a href="#experiencia"  class="text-white  font-sans relative transition-colors duration-300 hover:text-blue-500">Experiencia</a>
 
           </nav>
 
@@ -28,7 +27,7 @@
 </header>
 <!-- Mi perfil -->
 <div class="md:grid lg:grid-cols-3 md:h-full lg:w-full p-20">
-  <img class="rounded-full w-80 h-96 justify-self-center" src="da9d51c5-1088-4b40-8171-45e92bb637a4.jfif">
+  <img class="rounded-full w-80 h-96 justify-self-center" src="1737406117567.jfif">
 
   <h2 class="  self-center sm:grid grid-rows-2 text-5xl font-serif tracking-wider text-sky-300 text-center md:text-left">
     Hola, Soy André 
@@ -49,7 +48,7 @@
 
 
   
-<hr class="py-0.5 bg-sky-300 rounded-full"></hr>
+
 </div>
 </div>
 <hr class="py-0.5 m-10 bg-sky-300"></hr>
@@ -69,11 +68,7 @@
   Cursos en Udemy.<br><br><br>
   
   
-  <p class="sm:pl-40 text-balance font-sans sm:text-xl text-sky-200 leading-relaxed" >2021: Centro Educativo de Nivel Secundario (C.E.N.S) Nº45.
-    Secundario completo
-    2021-2023: Estudios en programación modalidad virtual (Coderhouse, Udemy y
-    Youtube)
-  </p>
+ 
   <section class="flex sm:pl-20 ">
     <h2 class=" text-white font-thin tracking-widest sm:text-2xl"><span class="text-sky-400">H</span>abilidades Aprendidas:</h2>
     <svg class=" sm:w-8 h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520">
@@ -122,8 +117,8 @@
 
 </section>
 <hr class="py-0.5 bg-sky-400 m-20">
- 
-<h1 class=" text-center text-white mb-2 text-2xl font-sans font-semibold items-center jus">Proyectos</></h1>
+ <section>
+<h1 class=" text-center text-white mb-2 text-2xl font-sans font-semibold items-center jus">Proyectos</li></h1>
 <div class="max-w-sm mx-auto bg-white rounded-lg shadow-md overflow-hidden">
   <img class="w-full h-48 object-cover" src="Proyectos/captura de pantalla 2024-07-06 221935.png"Imagen del Proyecto">
   <div class="p-6">
@@ -139,12 +134,11 @@
       </div>
       </div>
       </div>
+      </section>
+    </section>
 <section class=" text-balance grid grid-rows-4  text-center text-white mt-10">
 <hr>
-    <a id="C7">🙎🏻Nombre:<br> André Giuliani</a>
-    <a>📞Número de teléfono: <br>22275045</a>
-    <a>📅Fecha de nacimiento: <br>13/11/2000</a>
-    <a>🛖Dirección: <br>Lobos, Bs As</a>
+  
 
 </section>
 
